Entity setter 제거